feat: update path in the docs and add nickname at staff history
