# backend/internal/router/discount.go
@@ -16,13 +16,15 @@ func DiscountRoutes(repo repository.Repository, logger *zap.Logger) http.Handler
 
 	h := discount.New(repo, logger)
 
-	// Staff scans attendee's coupon QR code
-
-	r.With(middleware.StaffAuth(repo, logger)).Post("/{couponToken}", h.DiscountUsed)
-	// Staff previews user's available coupons
-	r.With(middleware.StaffAuth(repo, logger)).Get("/user/{couponToken}", h.GetUserCoupons)
-	// Staff sees their own redemption history
-	r.With(middleware.StaffAuth(repo, logger)).Get("/history", h.ListStaffHistory)
+	r.Route("/staff", func(r chi.Router) {
+		r.Use(middleware.StaffAuth(repo, logger))
+		// Staff scans attendee's coupon QR code
+		r.Post("/user/{userCouponToken}", h.DiscountUsed)
+		// Staff previews user's available coupons
+		r.Get("/user/{userCouponToken}", h.GetUserCoupons)
+		// Staff sees their own redemption history
+		r.Get("/history", h.ListStaffHistory)
+	})
 
 	// Get the count of discounts used by the user
 	r.With(middleware.Auth(repo, logger)).Get("/", h.GetDiscount)
